kubernetes/apps-deployment-repo/apps/attendance-api/overlay/region1-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance-api
  labels:
    app.kubernetes.io/name: attendance-server
    app.kubernetes.io/instance: attendance-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: attendance-api
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
