kubernetes/apps-deployment-repo/apps/attendance-api/overlay/region1-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: apps
spec:
  rules:
  - host: attendance-api.playground.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: attendance-api
            port:
              number: 5000
